first bits of proc repeat

--- a/localF.sty
+++ b/localF.sty
@@ -2,7 +2,7 @@
 %\def\a#1{\def\b##1{...}}
 \newcommand{\iidrv}[1][X]{$#1_1,\ldots,#1_{n}$}
 \newcommand{\adjm}[1]{\resizebox{.99\hsize}{!}{$#1$}\vspace{10px}}
-
+\newcommand{\khhff}{Kirchoff}
 %\Newcommand{\PartialToc}: moved in titleT
 \newcommand{\textgreek}[1]{\begingroup\fontencoding{LGR}\selectfont#1\endgroup}
 
